--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,10 +13,12 @@ hilt = "2.51.1"
 retrofit = "2.11.0"
 okhttp = "4.12.0"
 apollo = "4.1.1"
+nav = "2.8.7"
+
 
 [libraries]
 
-apollo-runtime = { module = "com.apollographql.apollo:apollo-runtime", version.ref = "apollo"}
+apollo-runtime = { module = "com.apollographql.apollo:apollo-runtime", version.ref = "apollo" }
 squareup-retrofit2 = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 squareup-retrofit2-converter-gson = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "retrofit" }
 squareup-okhttp3-logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okhttp" }
@@ -25,6 +27,7 @@ google-dagger-hilt = { group = "com.google.dagger", name = "hilt-android", versi
 androidx-lifecycle-viewmodel = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-datastore = { group = "androidx.datastore", name = "datastore-preferences", version.ref = "datastore" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "nav" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
